ui designs added

--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_chamal_details.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_chamal_details.xml
@@ -12,6 +12,9 @@
         android:id="@+id/imageView6"
         android:layout_width="340dp"
         android:layout_height="275dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.492"
@@ -23,11 +26,12 @@
 
     <TextView
         android:id="@+id/textView10"
-        android:layout_width="315dp"
-        android:layout_height="153dp"
-        android:layout_marginTop="68dp"
-        android:background="#090909"
+        android:layout_width="341dp"
+        android:layout_height="149dp"
+        android:layout_marginTop="55dp"
+        android:background="#16161D"
         android:text="@string/Chamal_Info"
+        android:textAlignment="center"
         android:textColor="#FDFDFD"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -46,7 +50,7 @@
         android:layout_marginTop="30dp"
         android:layout_marginEnd="159dp"
         android:layout_marginBottom="120dp"
-        android:background="@drawable/curvedsquarebutton"
+        android:background="@drawable/roundbtnselector"
         android:text="Back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
