--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_saicharan_details.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_saicharan_details.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:backgroundTint="#16161D"
     android:background="@drawable/fake_news_background_image_"
     tools:context=".SaicharanDetails">
 
@@ -11,6 +12,9 @@
         android:id="@+id/imageView4"
         android:layout_width="340dp"
         android:layout_height="275dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="16dp"
         android:contentDescription="TODO"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,17 +27,18 @@
 
     <TextView
         android:id="@+id/textView8"
-        android:layout_width="344dp"
+        android:layout_width="335dp"
         android:layout_height="145dp"
-        android:layout_marginTop="78dp"
-        android:background="#000000"
+        android:layout_marginTop="55dp"
+        android:background="#16161D"
         android:text="@string/Saicharan_Info"
+        android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.462"
+        app:layout_constraintHorizontal_bias="0.46"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView4"
         app:layout_constraintVertical_bias="0.0"
@@ -47,7 +52,7 @@
         android:layout_marginTop="30dp"
         android:layout_marginEnd="159dp"
         android:layout_marginBottom="120dp"
-        android:background="@drawable/curvedsquarebutton"
+        android:background="@drawable/roundbtnselector"
         android:text="Back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
