--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_how_we_do_it.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_how_we_do_it.xml
@@ -261,7 +261,7 @@
             android:layout_width="65dp"
             android:layout_height="31dp"
             android:layout_marginBottom="48dp"
-            android:background="@drawable/button1"
+            android:background="@drawable/roundbtnselector"
             android:fontFamily="sans-serif"
             android:text="Check"
             android:textSize="8sp"
