--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_splash.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_splash.xml
@@ -58,7 +58,7 @@
         android:layout_marginStart="87dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="88dp"
-        android:background="#B83737"
+        android:background="@drawable/roundbtnselector"
         android:bottomLeftRadius="10dp"
         android:bottomRightRadius="10dp"
         android:text="@string/readbtn"
