more ui stuff added

--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_how_we_do_it.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_how_we_do_it.xml
@@ -92,6 +92,7 @@
             android:layout_height="40dp"
             android:layout_marginTop="16dp"
             android:text="Project Zterling"
+            android:fontFamily="@font/montserrat"
             android:textAlignment="viewStart"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/logo_bar2"
@@ -113,12 +114,13 @@
 
         <TextView
             android:id="@+id/textView3"
-            android:layout_width="86dp"
-            android:layout_height="19dp"
+            android:layout_width="120dp"
+            android:layout_height="17dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="17dp"
             android:layout_marginEnd="337dp"
             android:layout_marginBottom="446dp"
+            android:fontFamily="@font/montserrat"
             android:text="How We Do It"
             android:textColor="#FFFFFF"
             android:textStyle="bold"
@@ -148,6 +150,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="34dp"
+            android:fontFamily="@font/montserrat"
             android:layout_marginTop="28dp"
             android:layout_marginEnd="278dp"
             android:text="@string/howto_step1"
@@ -161,6 +164,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="36dp"
+            android:fontFamily="@font/montserrat"
             android:text="@string/howto_step2"
             app:layout_constraintEnd_toEndOf="@+id/textView4"
             app:layout_constraintHorizontal_bias="0.132"
@@ -172,6 +176,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
+            android:fontFamily="@font/montserrat"
             android:text="@string/howto_step3"
             app:layout_constraintBottom_toBottomOf="@+id/textView4"
             app:layout_constraintEnd_toEndOf="@+id/textView4"
@@ -185,14 +190,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="14dp"
-            android:layout_marginTop="13dp"
+            android:layout_marginTop="12dp"
             android:layout_marginEnd="244dp"
             android:background="#000000"
+            android:fontFamily="@font/montserrat"
             android:text="@string/enterwebsite"
             android:textColor="#F4F4F4"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintHorizontal_bias="0.117"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
@@ -246,15 +252,16 @@
             android:layout_marginEnd="336dp"
             android:layout_marginBottom="3dp"
             android:background="#050505"
+            android:fontFamily="@font/montserrat"
             android:text="Enter Article"
             android:textColor="#FBFAFA"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine2"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.2"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="0.25" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/urlcheck"
@@ -262,7 +269,7 @@
             android:layout_height="31dp"
             android:layout_marginBottom="48dp"
             android:background="@drawable/roundbtnselector"
-            android:fontFamily="sans-serif"
+            android:fontFamily="@font/montserrat"
             android:text="Check"
             android:textSize="8sp"
             android:textStyle="bold"
@@ -279,6 +286,7 @@
             android:layout_marginStart="178dp"
             android:layout_marginTop="12dp"
             android:layout_marginEnd="206dp"
+            android:fontFamily="@font/montserrat"
             android:text="@string/true_false"
             android:textColor="#FFFFFF"
             android:textStyle="bold"
