--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_main.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_main.xml
@@ -63,6 +63,7 @@
             android:layout_marginTop="32dp"
             android:layout_marginEnd="96dp"
             android:background="#24CAE1"
+            android:fontFamily="@font/montserrat"
             android:text="@string/project_zterling"
             android:textAlignment="viewStart"
             android:textStyle="bold"
@@ -203,6 +204,7 @@
             android:layout_marginStart="2dp"
             android:layout_marginEnd="2dp"
             android:background="#252B50"
+            android:fontFamily="@font/montserrat"
             android:text='Text Content ("Hasnt been Hard coded")'
             android:textColor="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="@+id/textView16"
@@ -240,6 +242,7 @@
             android:layout_height="75dp"
             android:layout_marginStart="2dp"
             android:layout_marginTop="2dp"
+            android:fontFamily="@font/montserrat"
             android:layout_marginEnd="2dp"
             android:layout_marginBottom="1dp"
             android:background="#252B50"
@@ -255,6 +258,7 @@
             android:layout_width="356dp"
             android:layout_height="78dp"
             android:layout_marginStart="3dp"
+            android:fontFamily="@font/montserrat"
             android:layout_marginTop="132dp"
             android:layout_marginEnd="2dp"
             android:background="#252B50"
@@ -267,6 +271,7 @@
 
         <TextView
             android:id="@+id/textView22"
+            android:fontFamily="@font/montserrat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="180dp"
@@ -289,6 +294,7 @@
             android:layout_marginBottom="6dp"
             android:text="ReadMore>>"
             android:textColor="#FFFFFF"
+            android:fontFamily="@font/montserrat"
             app:layout_constraintBottom_toBottomOf="@+id/textView17"
             app:layout_constraintEnd_toEndOf="@+id/textView20"
             app:layout_constraintHorizontal_bias="0.946"
@@ -304,6 +310,7 @@
             android:layout_marginBottom="10dp"
             android:shadowColor="#FBF7F7"
             android:text="ReadMore>>"
+            android:fontFamily="@font/montserrat"
             android:textColor="#F4F4F4"
             app:layout_constraintBottom_toBottomOf="@+id/textView21"
             app:layout_constraintEnd_toEndOf="@+id/textView21"
