--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_pasath_details.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_pasath_details.xml
@@ -29,11 +29,12 @@
         android:layout_width="335dp"
         android:layout_height="150dp"
         android:layout_marginTop="55dp"
+        android:fontFamily="@font/montserrat"
         android:background="#16161D"
         android:text="@string/Pasath_Info"
         android:textAlignment="center"
         android:textColor="#F6F5F5"
-        android:textSize="20sp"
+        android:textSize="18dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,15 +48,13 @@
         android:id="@+id/backbtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="158dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="159dp"
-        android:layout_marginBottom="120dp"
+        android:layout_marginStart="154dp"
+        android:layout_marginTop="22dp"
+        android:layout_marginEnd="154dp"
+        android:fontFamily="@font/montserrat"
         android:background="@drawable/roundbtnselector"
         android:text="Back"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7"
-        app:layout_constraintVertical_bias="0.25" />
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
 </androidx.constraintlayout.widget.ConstraintLayout>
