--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_saicharan_details.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_saicharan_details.xml
@@ -29,12 +29,13 @@
         android:id="@+id/textView8"
         android:layout_width="335dp"
         android:layout_height="145dp"
+        android:fontFamily="@font/montserrat"
         android:layout_marginTop="55dp"
         android:background="#16161D"
         android:text="@string/Saicharan_Info"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
-        android:textSize="20sp"
+        android:textSize="18dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,13 +49,12 @@
         android:id="@+id/backbtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="158dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="159dp"
-        android:layout_marginBottom="120dp"
+        android:layout_marginStart="154dp"
+        android:layout_marginTop="22dp"
+        android:fontFamily="@font/montserrat"
+        android:layout_marginEnd="154dp"
         android:background="@drawable/roundbtnselector"
         android:text="Back"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
