--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_contact_us.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_contact_us.xml
@@ -40,7 +40,8 @@
             android:id="@+id/project_z_logo"
             android:layout_width="114dp"
             android:layout_height="56dp"
-            android:text="Project Z Logo"
+            android:text="Project Zterling"
+            android:fontFamily="@font/montserrat"
             android:textAlignment="center"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/logo_bar"
@@ -212,6 +213,7 @@
             android:gravity="center"
             android:shadowColor="#FFFDFD"
             android:text="Meet The Team"
+            android:fontFamily="@font/montserrat"
             android:textColor="#EFEFEF"
             android:textSize="34sp"
             android:textStyle="bold"
