--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_splash.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_splash.xml
@@ -26,7 +26,7 @@
         android:layout_marginStart="46dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="46dp"
-        android:fontFamily="monospace"
+        android:fontFamily="@font/montserrat"
         android:text="@string/projectz"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
@@ -42,6 +42,7 @@
         android:layout_height="28dp"
         android:layout_marginTop="24dp"
         android:text="@string/quote"
+        android:fontFamily="@font/montserrat"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
@@ -62,6 +63,7 @@
         android:bottomLeftRadius="10dp"
         android:bottomRightRadius="10dp"
         android:text="@string/readbtn"
+        android:fontFamily="@font/montserrat"
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp"
         app:iconTint="#E91E63"
