--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_yasindu_details.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_yasindu_details.xml
@@ -4,31 +4,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fake_news_background_image_"
+    android:background="#16161D"
     tools:context=".YasinduDetails">
 
     <ImageView
         android:id="@+id/imageView7"
         android:layout_width="340dp"
         android:layout_height="275dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="16dp"
         android:contentDescription="@string/todo_"
+        app:srcCompat="@drawable/yasindu"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.085"
-        tools:ignore="ImageContrastCheck"
-        tools:srcCompat="@drawable/yasindu" />
+        tools:ignore="ImageContrastCheck" />
 
     <TextView
         android:id="@+id/textView11"
         android:layout_width="334dp"
         android:layout_height="129dp"
-        android:background="#000000"
+        android:background="#16161D"
         android:text="@string/Yasindu_Info"
+        android:textAlignment="center"
         android:textColor="#F8F8F8"
-        android:textSize="20sp"
+        android:fontFamily="@font/montserrat"
+        android:textSize="18dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,13 +46,12 @@
         android:id="@+id/backbtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="158dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="159dp"
-        android:layout_marginBottom="120dp"
+        android:layout_marginStart="154dp"
+        android:fontFamily="@font/montserrat"
+        android:layout_marginTop="22dp"
+        android:layout_marginEnd="164dp"
         android:background="@drawable/roundbtnselector"
         android:text="Back"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView11" />
