--- a/Frontend/SuperMainMain/app/src/main/res/values/colors.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
 
     <color name="pink">#F46179</color>
     <color name="light_pink">#FA9CAC</color>
+    <color name="sleepy_black">#16161D</color>
 </resources>
