--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_chamal_details.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_chamal_details.xml
@@ -30,7 +30,7 @@
         android:layout_height="149dp"
         android:layout_marginTop="55dp"
         android:background="#16161D"
-        android:fontFamily="@font/montserrat"
+        android:fontFamily="@font/bigshot_one"
         android:text="@string/Chamal_Info"
         android:textAlignment="center"
         android:textColor="#FDFDFD"
