--- a/Frontend/SuperMainMain/app/src/main/res/values/preloaded_fonts.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/values/preloaded_fonts.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="preloaded_fonts" translatable="false">
+        <item>@font/bigshot_one</item>
         <item>@font/inter_medium</item>
         <item>@font/montserrat</item>
+        <item>@font/montserrat_subrayada</item>
         <item>@font/space_grotesk</item>
     </array>
 </resources>
