--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_manith_details.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_manith_details.xml
@@ -9,6 +9,27 @@
     android:textAlignment="center"
     tools:context=".ManithDetails">
 
+    <TextView
+        android:id="@+id/semi"
+        android:layout_width="410dp"
+        android:layout_height="148dp"
+        android:background="@drawable/semi1"
+        android:padding="200dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/burgmenu"
+        android:layout_width="52dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        android:background="#24cce3"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/semi"
+        app:srcCompat="@drawable/menu" />
+
     <ImageView
         android:id="@+id/imageView5"
         android:layout_width="340dp"
