--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_pasath_details.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_pasath_details.xml
@@ -7,6 +7,26 @@
     android:backgroundTint="#16161D"
     android:background="@drawable/fake_news_background_image_"
     tools:context=".PasathDetails">
+    <TextView
+        android:id="@+id/semi"
+        android:layout_width="410dp"
+        android:layout_height="148dp"
+        android:background="@drawable/semi1"
+        android:padding="200dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/burgmenu"
+        android:layout_width="60dp"
+        android:layout_height="53dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        android:background="#24cce3"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/semi"
+        app:srcCompat="@drawable/menu" />
 
     <ImageView
         android:id="@+id/imageView3"
