--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_manith_details.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_manith_details.xml
@@ -26,9 +26,10 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:background="#24cce3"
+        app:srcCompat="@drawable/menu"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/semi"
-        app:srcCompat="@drawable/menu" />
+         />
 
     <ImageView
         android:id="@+id/imageView5"
