--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_how_we_do_it.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_how_we_do_it.xml
@@ -2,13 +2,12 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width = "match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fake_news_background_image_"
-    tools:context=".how_we_do_it"
-    android:contentDescription="TODO">
-
-
+    android:background="@color/sleepy_black"
+    android:contentDescription="TODO"
+    android:fadeScrollbars="true"
+    tools:context=".how_we_do_it">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -93,8 +92,8 @@
             android:layout_width="109dp"
             android:layout_height="40dp"
             android:layout_marginTop="16dp"
-            android:text="Project Zterling"
             android:fontFamily="@font/montserrat"
+            android:text="Project Zterling"
             android:textAlignment="viewStart"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/logo_bar2"
@@ -125,7 +124,7 @@
             android:fontFamily="@font/montserrat"
             android:text="How We Do It"
             android:textColor="#FFFFFF"
-            android:textStyle="bold"
+            android:textStyle="italic"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.074"
@@ -139,10 +138,10 @@
             android:layout_height="172dp"
             android:layout_marginTop="1dp"
             android:layout_marginBottom="139dp"
-            android:background="@drawable/rectangle"
+            android:background="@drawable/curvedsquarebutton"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.291"
+            app:layout_constraintHorizontal_bias="0.244"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView3"
             app:layout_constraintVertical_bias="0.0" />
@@ -152,12 +151,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="34dp"
-            android:fontFamily="@font/montserrat"
-            android:layout_marginTop="28dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="278dp"
+            android:fontFamily="@font/montserrat"
             android:text="@string/howto_step1"
+            android:textAlignment="viewStart"
+            android:textColor="@color/black"
+            android:textSize="10sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@+id/textView4"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="0.106"
             app:layout_constraintStart_toStartOf="@+id/textView4"
             app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
@@ -165,11 +168,15 @@
             android:id="@+id/howto_step2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="36dp"
+            android:layout_marginTop="24dp"
             android:fontFamily="@font/montserrat"
             android:text="@string/howto_step2"
+            android:textAlignment="viewStart"
+            android:textColor="@color/black"
+            android:textSize="10sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@+id/textView4"
-            app:layout_constraintHorizontal_bias="0.132"
+            app:layout_constraintHorizontal_bias="0.111"
             app:layout_constraintStart_toStartOf="@+id/textView4"
             app:layout_constraintTop_toBottomOf="@+id/howto_step1" />
 
@@ -177,15 +184,17 @@
             android:id="@+id/howto_step3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="20dp"
             android:fontFamily="@font/montserrat"
             android:text="@string/howto_step3"
-            app:layout_constraintBottom_toBottomOf="@+id/textView4"
+            android:textAlignment="viewStart"
+            android:textColor="@color/black"
+            android:textSize="10sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@+id/textView4"
-            app:layout_constraintHorizontal_bias="0.115"
+            app:layout_constraintHorizontal_bias="0.134"
             app:layout_constraintStart_toStartOf="@+id/textView4"
-            app:layout_constraintTop_toBottomOf="@+id/howto_step2"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintTop_toBottomOf="@+id/howto_step2" />
 
         <TextView
             android:id="@+id/enterwebsite"
@@ -194,13 +203,12 @@
             android:layout_marginStart="14dp"
             android:layout_marginTop="12dp"
             android:layout_marginEnd="244dp"
-            android:background="#000000"
             android:fontFamily="@font/montserrat"
             android:text="@string/enterwebsite"
             android:textColor="#F4F4F4"
-            android:textStyle="bold"
+            android:textStyle="italic"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.117"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
@@ -253,11 +261,10 @@
             android:layout_marginTop="7dp"
             android:layout_marginEnd="336dp"
             android:layout_marginBottom="3dp"
-            android:background="#050505"
             android:fontFamily="@font/montserrat"
             android:text="Enter Article"
             android:textColor="#FBFAFA"
-            android:textStyle="bold"
+            android:textStyle="italic"
             app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -283,15 +290,16 @@
 
         <TextView
             android:id="@+id/true_false"
-            android:layout_width="27dp"
-            android:layout_height="23dp"
+            android:layout_width="144dp"
+            android:layout_height="21dp"
             android:layout_marginStart="178dp"
             android:layout_marginTop="12dp"
             android:layout_marginEnd="206dp"
             android:fontFamily="@font/montserrat"
             android:text="@string/true_false"
+            android:textAlignment="center"
             android:textColor="#FFFFFF"
-            android:textStyle="bold"
+            android:textStyle="italic"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
