Compatibility test added, local database connected

--- a/Frontend/SuperMainMain/app/src/main/res/layout/activity_main.xml
+++ b/Frontend/SuperMainMain/app/src/main/res/layout/activity_main.xml
@@ -113,6 +113,7 @@
             android:layout_width="50dp"
             android:layout_height="48dp"
             android:src="@drawable/factcheck"
+            android:background="#24cce3"
             app:layout_constraintBottom_toBottomOf="@+id/textView15"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.656"
@@ -126,6 +127,7 @@
             android:layout_width="50dp"
             android:layout_height="48dp"
             android:src="@drawable/newnews"
+            android:background="#24cce3"
             app:layout_constraintBottom_toBottomOf="@+id/textView15"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.045"
@@ -138,6 +140,7 @@
             android:layout_width="50dp"
             android:layout_height="48dp"
             android:src="@drawable/latestnews"
+            android:background="#24cce3"
             app:layout_constraintBottom_toBottomOf="@+id/textView15"
             app:layout_constraintEnd_toEndOf="@+id/textView15"
             app:layout_constraintHorizontal_bias="0.335"
@@ -150,6 +153,7 @@
             android:id="@+id/imageButton9"
             android:layout_width="50dp"
             android:layout_height="48dp"
+            android:background="#24cce3"
             android:src="@drawable/team"
             app:layout_constraintBottom_toBottomOf="@+id/textView15"
             app:layout_constraintEnd_toEndOf="parent"
@@ -213,7 +217,7 @@
             android:layout_marginEnd="2dp"
             android:background="#252B50"
             android:fontFamily="@font/montserrat"
-            android:text='Text Content ("Hasnt been Hard coded")'
+            android:text='View All Fake News'
             android:textColor="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="@+id/textView16"
             app:layout_constraintEnd_toEndOf="@+id/textView16"
@@ -254,7 +258,7 @@
             android:layout_marginEnd="2dp"
             android:layout_marginBottom="1dp"
             android:background="#252B50"
-            android:text="Text Content (&quot;Hasnt been Hard coded&quot;)"
+            android:text="View All True News"
             android:textColor="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="@+id/textView17"
             app:layout_constraintEnd_toEndOf="@+id/textView17"
@@ -270,7 +274,7 @@
             android:layout_marginTop="132dp"
             android:layout_marginEnd="2dp"
             android:background="#252B50"
-            android:text="Text Content (&quot;Hasnt been Hard coded&quot;)"
+            android:text="View All News"
             android:textColor="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="@+id/textView18"
             app:layout_constraintEnd_toEndOf="@+id/textView18"
